# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-02-01 23:00:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-186

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-186


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs
     libsrc/MissingH/IO/HVFS.hs


2005-02-01 22:18:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-185

    Summary:
      Added StringDBM
    Revision:
      missingh--head--0.7--patch-185


    new files:
     libsrc/MissingH/AnyDBM/.arch-ids/=id
     libsrc/MissingH/AnyDBM/FiniteMapDBM.hs
     libsrc/MissingH/AnyDBM/StringDBM.hs

    modified files:
     ChangeLog MissingH.cabal libsrc/MissingH/AnyDBM.hs

    new directories:
     libsrc/MissingH/AnyDBM libsrc/MissingH/AnyDBM/.arch-ids


2005-02-01 21:30:41 GMT	John Goerzen <jgoerzen@complete.org>	patch-184

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-184


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM.hs {arch}/=tagging-method


2005-02-01 21:24:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-183

    Summary:
      Updated Debian files
    Revision:
      missingh--head--0.7--patch-183


    modified files:
     COPYRIGHT ChangeLog MissingH.cabal debian/changelog
     debian/copyright libsrc/MissingH/List.hs testsrc/Listtest.hs


2005-02-01 21:22:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-182

    Summary:
      Adding AnyDBM features
    Revision:
      missingh--head--0.7--patch-182


    new files:
     libsrc/MissingH/AnyDBM.hs

    modified files:
     ChangeLog Makefile MissingH.cabal libsrc/MissingH/FiniteMap.hs
     libsrc/MissingH/List.hs testsrc/Listtest.hs


2005-01-28 17:43:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-181

    Summary:
      Added doc directory
    Revision:
      missingh--head--0.7--patch-181


    new files: