@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2005-02-02 04:03:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-187
+
+    Summary:
+      checkpointing
+    Revision:
+      missingh--head--0.7--patch-187
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs
+
+
 2005-02-01 23:00:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-186
 
     Summary:
